Add poem sourcing

--- a/basic.html
+++ b/basic.html
@@ -114,6 +114,7 @@
     We're challenged and tested in every way,<br>
     But we emerge stronger, with skills to display.<br>
     </p>
+        <p><i>This was written with the help of ChatGPT</i></p>
 
     
     <h2>This is one of my favorite quotes</h2>
